--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -100,7 +100,7 @@ blockquote {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
-    font-size: 0.875rem;
+    font-size: 16px;
     p {
       display: inline-block;
       margin: 0;
