--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,7 +22,7 @@ $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
-$wood-color:          #88807B !default;
+$ocean-color:         #47daff !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
@@ -35,5 +35,5 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($wood-color, 0.05);
+$code-bg-color-light:     rgba($ocean-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
